--- a/04-MY451_4.rmd
+++ b/04-MY451_4.rmd
@@ -27,7 +27,7 @@ conditional proportions for attitude given sex.
   : *``The government should take measures to reduce differences in income levels''*: Frequencies of respondents in the survey example, by sex and
   attitude towards income redistribution. The numbers in parentheses are
   conditional proportions of attitude given sex. Data: European Social Survey, Round 5, 2010, UK respondents only.<span
-  data-label="t_sex_attitude_ch4"></span>
+  data-label="tab:t-sex-attitude-ch4"></span>
 
 Unlike in Section \@ref(ss-descr1-2cat-tables), we will now go beyond
 description of sample distributions and into statistical inference. The
@@ -405,7 +405,7 @@ test statistic for this example are shown in Table
   \@ref(t-sex-attitude-ch4). In the second column, SA, A, 0, D, and SD
   are abbreviations for Strongly agree, Agree, Neither agree nor
   disagree, Disagree and Strongly disagree respectively.<span
-  data-label="t_sex_attitude_chi2"></span>
+  data-label="tab:t-sex-attitude-chi2"></span>
 
 The calculations can be done even by hand, but we will usually leave
 them to a computer. The last column of Table \@ref(t-sex-attitude-chi2)
@@ -573,7 +573,7 @@ the real sample that we have actually observed.
   : *``The government should take measures to reduce differences in income levels''*: Attitude towards income redistribution by sex (with row proportions
   in parentheses), in a hypothetical population of 50 million people
   where sex and attitude are independent, and in one random sample from
-  this population.<span data-label="t_sex_attitude_H0pop"></span>
+  this population.<span data-label="tab:t-sex-attitude-H0pop"></span>
 
 *Sample:*
 
@@ -588,7 +588,7 @@ the real sample that we have actually observed.
                                                   (0.155)    (0.458)      (0.179)      (0.173)    (0.035)     (1.0)
   ---------------------------------------------- ---------- --------- --------------- ---------- ---------- -------
 
-  : $\chi^{2}=2.8445$ <span data-label="t_sex_attitude_H0pop"></span>
+  : $\chi^{2}=2.8445$ <span data-label="tab:t-sex-attitude-H0pop"></span>
 
 In the example we have a sample of 2344 observations, so to match that
 we want to identify the sampling distribution of the $\chi^{2}$
@@ -807,7 +807,7 @@ statistic was 9.49, $P$ would be 0.050.
   ---------- --------------------------------------------------- ------- ------- ----------
 
   : An extract from a table of critical values for $\chi^{2}$
-  distributions. Row 2-5 show the right-hand tail probability<span data-label="t_chi2table"></span>
+  distributions. Row 2-5 show the right-hand tail probability<span data-label="tab:t-chi2table"></span>
 
 The values in the table also provide bounds for other values that are
 not shown. For instance, in the hypothetical sample in Table
