--- a/09-MY451_9.rmd
+++ b/09-MY451_9.rmd
@@ -45,7 +45,7 @@ applicant and whether he or she was admitted to the university.
 
   : Table of sex of applicant vs. admission in the Berkeley admissions
   data. The column labelled ‘% Yes’ is the percentage of applicants
-  admitted within each row. $\chi^{2}=38.4$, $df=1$, $P<0.001$.<span data-label="t_berkeley1"></span>
+  admitted within each row. $\chi^{2}=38.4$, $df=1$, $P<0.001$.<span data-label="tab:t-berkeley1"></span>
 
 
 The percentages in Table \@ref(t-berkeley1) show that men were more
@@ -85,7 +85,7 @@ sex and admission is shown in Table \@ref(t-berkeley2).
   ---------------------------- ------------------------------------------------ -------------------------------- ---------- ------- -------
 
   :  Sex of applicant vs. admission by academic department in the
-  Berkeley admissions data. <span data-label="t_berkeley2"></span>
+  Berkeley admissions data. <span data-label="tab:t-berkeley2"></span>
 
 Table \@ref(t-berkeley2) is a *three-way* contingency table, because each
 of its internal cells shows the number of applicants with a particular
@@ -136,7 +136,7 @@ departments and fewer to the easy ones.
   ---------------------- ---------------------------------- ----- ----- ----- -----
 
   : Percentages of male applicants and applicants admitted by department
-  in the Berkeley admissions data.<span data-label="t_berkeley3"></span>
+  in the Berkeley admissions data.<span data-label="tab:t-berkeley3"></span>
 
 
 One possible set of causal connections leading to a spurious association
@@ -197,7 +197,7 @@ original two-way table are thus unchanged after controlling for sex.
   :  Frequencies of respondents by age group and attitude towards
   short-term gains in Example 9.2, controlling for sex of respondent.
   The numbers below the frequencies are proportions within rows. $\chi^{2}=82.4$, $df=9$, $P<0.001$. $\gamma=-0.376$.<span
-  data-label="t_investors3"></span>
+  data-label="tab:t-investors3"></span>
 
   -------------------------------------------------------- ------------------------------------------------------- ----------- ----------- ----------- -------
   **WOMEN**                                                                                                           Slightly                    Very
@@ -218,7 +218,7 @@ original two-way table are thus unchanged after controlling for sex.
   :  Frequencies of respondents by age group and attitude towards
   short-term gains in Example 9.2, controlling for sex of respondent.
   The numbers below the frequencies are proportions within rows. $\chi^{2}=27.6$, $df=9$, $P=0.001$. $\gamma=-0.395$.<span
-  data-label="t_investors3"></span>
+  data-label="tab:t-investors3"></span>
 
 **Example 9.3**: ***The Titanic***
 
@@ -248,7 +248,7 @@ were more likely to survive than male passengers or the ship’s crew.
 
   : Survival status of the people aboard the *Titanic*, divided into
   three groups. The numbers in brackets are proportions of survivors and
-  non-survivors within each group. $\chi^{2}=418$, $\text{df}=2$, $P<0.001$.<span data-label="t_titanic2"></span>
+  non-survivors within each group. $\chi^{2}=418$, $\text{df}=2$, $P<0.001$.<span data-label="tab:t-titanic2"></span>
 
 We next control also for the class in which a person was travelling,
 classified as first, second or third class. Since class does not apply
@@ -289,7 +289,7 @@ $\chi^{2}=344$ and $P<0.001$.
 
   :  Survival status of the passengers of the *Titanic*, classified by
   class and sex. The numbers below the frequencies are proportions
-  within rows. <span data-label="t_titanic3"></span>
+  within rows. <span data-label="tab:t-titanic3"></span>
 
 Two-way tables involving class (not shown here) suggest that it is
 mildly associated with sex (with percentages of men 54%, 59% and 65% in
@@ -380,7 +380,7 @@ variables. One such variable is the age of the respondents.
 
   : Table of smoking status in 1972–74 vs. twenty-year survival among
   the respondents in Example 9.4. The numbers below the frequencies are
-  proportions within rows.<span data-label="t_whickham1"></span>
+  proportions within rows.<span data-label="tab:t-whickham1"></span>
 
 Table \@ref(t-whickham2) shows the partial tables of smoking vs.\survival
 controlling for age at the time of the first survey, classified into
@@ -421,7 +421,7 @@ associations between the control variable and the other two variables.
 
   : Percentage of respondents in Example 9.4 surviving at the time of
   the second survey, by smoking status and age group in 1972–74.<span
-  data-label="t_whickham2"></span>
+  data-label="tab:t-whickham2"></span>
 
 
 The two-way tables of age by survival and age by smoking are shown side
@@ -466,7 +466,7 @@ respondents overall were in this age group.
   and age group vs. smoking (on the right) in Example 6.4. The
   percentages in parentheses are column percentages (within smokers or
   nonsmokers) and the ones without parentheses are row percentages
-  (within age groups). <span data-label="t_whickham3"></span>
+  (within age groups). <span data-label="tab:t-whickham3"></span>
 
 Table \@ref(t-whickham3) shows a clear association between age and
 survival, for understandable reasons mostly unconnected with smoking.
