--- a/05-MY451_5.rmd
+++ b/05-MY451_5.rmd
@@ -477,7 +477,7 @@ normal distribution. Here the value of the $z$-test statistic is
 $z=-1.59$ (as in the referendum example 5.1). The areas in grey indicate
 the two-sided $P$-values, i.e. the probabilities of values at least as
 far from 0 as the observed value of $z$. <span
-data-label="f_pval_prob"></span>](pval_zp){width="10cm"}
+data-label="fig:f-pval_prob"></span>](pval_zp){width="10cm"}
 
 The $P$-value of the test is calculated from this distribution using the
 general principles introduced in Section \@ref(ss-tables-chi2test-Pval).
@@ -1241,7 +1241,7 @@ is hope that that number will reach 0 in a not-too-distant future, so
 that the once devastating disease will one day be entirely eradicated.
 
 ![Public reaction to statistical inference.<span
-data-label="f_nytimes"></span>](salk_nytimes){width="150mm"}
+data-label="fig:f-nytimes"></span>](salk_nytimes){width="150mm"}
 
 [^1]: This example is based on a newspaper report of a real poll for
     which the percentages were reported only as 47, 27, and 26 out of
